[package]
name = "wrkflw-evaluator"
version = "0.8.0"
edition.workspace = true
description = "Workflow evaluation functionality for wrkflw execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models.workspace = true
wrkflw-validators.workspace = true

# External dependencies
colored.workspace = true
serde_yaml.workspace = true
