[package]
name = "wrkflw-executor"
version = "0.7.3"
edition.workspace = true
description = "Workflow execution engine for wrkflw"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models.workspace = true
wrkflw-parser.workspace = true
wrkflw-runtime.workspace = true
wrkflw-logging.workspace = true
wrkflw-matrix.workspace = true
wrkflw-secrets.workspace = true
wrkflw-utils.workspace = true

# External dependencies
async-trait.workspace = true
bollard.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
futures-util.workspace = true
ignore = "0.4"
lazy_static.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
glob.workspace = true
serde.workspace = true
sha2.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shlex.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock.workspace = true
