[package]
name = "wrkflw-runtime"
version = "0.8.0"
edition.workspace = true
description = "Runtime execution environment for wrkflw workflow engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models.workspace = true
wrkflw-logging.workspace = true

# External dependencies
async-trait.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
futures.workspace = true
ignore = "0.4"
wrkflw-utils.workspace = true
which.workspace = true
regex.workspace = true
thiserror.workspace = true
