[package]
name = "wrkflw-ui"
version = "0.8.0"
edition.workspace = true
description = "Terminal user interface for wrkflw workflow execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:ratatui"]

[dependencies]
# Internal crates
wrkflw-models.workspace = true
wrkflw-evaluator.workspace = true
wrkflw-executor.workspace = true
wrkflw-parser.workspace = true
wrkflw-logging.workspace = true
wrkflw-trigger-filter.workspace = true
wrkflw-utils.workspace = true
wrkflw-github.workspace = true
wrkflw-gitlab.workspace = true
wrkflw-matrix.workspace = true
wrkflw-secrets.workspace = true

# External dependencies
chrono.workspace = true
colored.workspace = true
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
regex.workspace = true
futures.workspace = true
urlencoding.workspace = true
