[package]
name = "wrkflw-utils"
version = "0.8.0"
edition.workspace = true
description = "Utility functions for wrkflw workflow execution engine"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
wrkflw-models.workspace = true

# External dependencies
serde.workspace = true
serde_yaml.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
